--- a/src/main/resources/static/css/task_style.css
+++ b/src/main/resources/static/css/task_style.css
@@ -200,6 +200,7 @@
 	height: 30px;
 	color: #a5a5a5;
 	margin-bottom: 2em;
+	display: inline-block;
 }
 .deadline{
 	float: right;
@@ -268,8 +269,7 @@
 	margin-top: 5px;
 	
 	margin-left: 35px;
-/*	font-size: 1.2em;*/
-/*	font-weight: 590;*/
+	display: inline-block;
 	vertical-align: middle;
 /*	position: absolute;*/
 }
