--- a/src/main/resources/templates/stu_task.html
+++ b/src/main/resources/templates/stu_task.html
@@ -402,7 +402,7 @@ $(function (){
 				<form class="form form-group" name="" method="post">
 				<input class="display form-control" id="search_tea" style="border: 0px solid #ccc;" type="text"  placeholder="搜索老师">
 				<div id="sear_around" style="display: none;">
-				<div id="sear_float" class="display">
+				<div id="sear_float" class="display" style="box-shadow: 3px 3px 3px #333;">
 					<ul id="float_ul">
 						<li class="float_ul_li float_ul_under">
 							<div class="float_li_img"></div>
@@ -463,7 +463,7 @@ $(function (){
 	</div>
 	<div id="main thetable" style="z-index: 1;" >
 		<div class="main_style_left display"></div>
-		<div class="main_style display " >
+		<div class="main_style display ">
 			<span style="width:40%;display: inline-block;"></span>
 			<span class="title" ><strong class="title_word" id="test11">暂存</strong></span>
 			<ul class="pre-scrollable" id="addLi1" style="height:500px;list-style:none;">
