--- a/src/main/resources/templates/tea_task_empty.html
+++ b/src/main/resources/templates/tea_task_empty.html
@@ -94,7 +94,7 @@ $(function (){
 	</div>
 	<div id="guidance">
 		<div id="left" class="display">
-			<span id="left_origin"><a href="tea_home.html">首页</a></span>
+			<span id="left_origin"><a href="tea_home_backup.html">首页</a></span>
 			<img src="../static/images/bigger.png" style="width: 15px;">
 			<span id="left_name"><a href="tea_task.html">项目名</a></span>
 		</div>
