--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -195,6 +195,36 @@ a.forgot-w3layouts {
     -o-transition: 0.3s all;
     -ms-transition: 0.3s all;
 }
+.submit-w3l1 div {
+    background: #fff;
+    color: #000;
+    outline: none;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    cursor: pointer;
+    padding: 13px 38px;
+    font-size: 14px;
+    width: 100%;
+    margin-top: 1em;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    transition: 0.3s all;
+    -webkit-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    -o-transition: 0.3s all;
+    -ms-transition: 0.3s all;
+}
+.submit-w3l1 div:hover{
+    background: #df5799;
+	color:#ffffff;
+	transition: 0.3s all;
+    -webkit-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    -o-transition: 0.3s all;
+    -ms-transition: 0.3s all;
+}
 .p-bottom-w3ls {
     font-size: 14px;
     color: #eee;
@@ -463,6 +493,9 @@ label p {
 	.submit-w3l input[type="submit"] {
 		padding: 10px 38px;
 	}
+	.submit-w3l1 div {
+		padding: 10px 38px;
+	}
 }
 @media(max-width:736px){
 	.main-agileits {
@@ -550,6 +583,9 @@ label p {
 	.submit-w3l input[type="submit"] {
 		padding: 8px 38px;
 	}
+	.submit-w3l1 div {
+		padding: 8px 38px;
+	}
 }
 @media(max-width:414px){
 	h1 {
@@ -587,6 +623,9 @@ label p {
 		margin: 0px 8px 0px 0px;
 	}
 	.submit-w3l input[type="submit"] {
+		font-size: 13px;
+	}
+	.submit-w3l1 div {
 		font-size: 13px;
 	}
 }
