--- a/src/main/resources/static/css/task_style.css
+++ b/src/main/resources/static/css/task_style.css
@@ -10,21 +10,42 @@
 	height: 60px;
 }
 #banner_left{
-	width: 34%;
-	display:inline-block;
-/*	border: 1px solid red;*/
-	margin-left: 20px;
+	width: 32%;
+/*	margin-left: 20px;*/
+	height:auto
 	margin-top: 10px;
 	
 }
+#sear_float{
+	
+	z-index: 5;
+	background: #f8f8f8;
+	position: fixed;
+	margin: 10px;
+	width: 20%;
+	height: auto;
+	border-radius: 10px;
+	margin-left: 1180px;
+	margin-top: -10px;
+}
+
+#sear_around{
+	margin-left: -18px;
+/*	display: none;*/
+}
 #banner_mid{
-	width: 28%;
-/*	border: 1px solid red;*/
+	width:33%;
 	
 }
 #banner_right{
-	width: auto;
-/*	border: 1px solid red;*/
+	width: 26%;
+	right: 0;
+/*	float: right;*/
+	
+}
+#banner_left,#banner_mid,#banner_right{
+}
+#message{
 	
 }
 #guidance{
@@ -41,7 +62,26 @@
 	 font-size: 1.1em;
 	font-weight: 500;
 	margin-left: 20px;
+	width: 38%;
 	
+}
+#mid{
+	display: inline-block;
+/*	margin-left: 500px;*/
+/*	margin: 0 auto;*/
+	height: inherit;
+	width: auto;
+	width: 30%;
+/*	border: 1px solid blue;*/
+		
+}
+#temp{
+	width: 17%;
+}
+#right{
+	width:10%;
+}
+#left,#right,#mid,#temp{
 }
 #left_origin a:hover{
 	color: #4eb0f6;
@@ -50,15 +90,6 @@
 #left_name a:hover{
 	color: #000;
 	text-decoration: none;
-}
-#mid{
-	display: inline-block;
-	margin-left: 500px;
-/*	margin: 0 auto;*/
-	height: inherit;
-	width: auto;
-/*	border: 1px solid blue;*/
-		
 }
 #task,#file,#resource,#eye{
 /*	margin-left: 10px;*/
@@ -76,6 +107,87 @@
 }
 #main{
 	margin-left: 5px;
+}
+#none_text{
+	text-align: center;
+	font-size: 3em;
+	color: #ddd;
+	margin-top: 5em;
+	
+	
+}
+.mess_cont{
+	height: 55px;
+	border-bottom: 1px solid #d7d7d7;	
+}
+.mess_top{
+	border-bottom: 1px solid #d7d7d7;
+	font-size: 1.4em;
+	font-weight: 500;
+	color: #939393;
+	text-align: center;
+	height: 60px;
+	line-height: 60px;
+}
+.mess_cont_word{
+	margin-top: 10px;
+	margin-left: 15px;
+	height: 70px;
+}
+.mess_cont_btn{
+	margin-top: -43px;
+	margin-left: 195px;
+}
+.cont_btn_agree{
+	height: 18px;
+	line-height: 18px;
+	width:30px;
+	color: #fff;
+	padding-left: 2px;
+	border-radius: 5px;
+	background: #8db1be;
+	display: inline-block;
+	font-size: 0.8em;
+	
+}
+.cont_btn_refuse{
+	padding-left: 2px;
+	margin-left: 5px;
+	height: 18px;
+	line-height: 18px;
+	width:30px;
+	color: #fff;
+	border-radius: 5px;
+	background: #c6c6c6;
+	display: inline-block;
+	font-size: 0.8em;
+	
+}
+.cont_word_pic1{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	border-radius: 50%;
+	background: #7e99b0;
+}
+.cont_word_pic2{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	border-radius: 50%;
+	background: #888787;
+}
+.cont_word{
+	color: #8d8d8d;
+}
+.divide_date{
+	background: #f8f8f8;
+/*	text-align: center;*/
+	margin-left: 120px;
+	width: 54px;
+	font-size: 0.8em;
+	margin-top: -8px;
+	color: #c4c5c7;
 }
 .display{
 	display: inline-block;
@@ -113,6 +225,7 @@
 	height: 30px;
 	color: #a5a5a5;
 	margin-bottom: 2em;
+	display: inline-block;
 }
 .deadline{
 	float: right;
@@ -181,8 +294,7 @@
 	margin-top: 5px;
 	
 	margin-left: 35px;
-/*	font-size: 1.2em;*/
-/*	font-weight: 590;*/
+	display: inline-block;
 	vertical-align: middle;
 /*	position: absolute;*/
 }
