--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,38 +4,18 @@
 <html class="region-default"><head>
     
 
-	<link rel="stylesheet" href="../static/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../static/css/style1.css">
-	<link rel="stylesheet" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/style1.css">
+	<link rel="stylesheet" href="/css/bootstrap.css">
 
 
-
-
-    <meta property="og:image" content="../static/images/squarespace.jpg" />
-    <meta property="og:image:secure_url" content="../static/images/squarespace.jpg" />
-
-  
 <base href="">
 <meta charset="utf-8" />
 <title></title>
-<meta property="og:type" content="website"/>
-<meta property="og:image" content="../static/images/squarespace.jpg?format=1000w"/>
-<meta property="og:image:height" content="525"/>
-<meta itemprop="name" content="Build a Website"/>
-<meta itemprop="url" content="https://www.squarespace.com/"/>
-<meta itemprop="thumbnailUrl" content="../static/images/squarespace.jpg?format=1000w"/>
-<link rel="image_src" href="../static/images/squarespace.jpg?format=1000w" />
-<meta itemprop="image" content="../static/images/squarespace.jpg?format=1000w"/>
-<meta name="twitter:image" content="../static/images/squarespace.jpg?format=1000w"/>
-<meta name="twitter:card" content="summary"/>
-<meta name="description" content="Squarespace is the all-in-one solution for anyone looking to create a 
-beautiful website. Domains, eCommerce, hosting, galleries, analytics, and 
-24/7 support all included." />
+<link rel="image_src" href="/images/squarespace.jpg?format=1000w" />
 <script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
 
 <script>
-window._prum = [['id', '520b907babe53db940000001'],
-            ['mark', 'firstbyte', (new Date()).getTime()]];
 (function() {
     var s = document.getElementsByTagName('script')[0]
       , p = document.createElement('script');
@@ -44,7 +24,7 @@ window._prum = [['id', '520b907babe53db940000001'],
     s.parentNode.insertBefore(p, s);
 })();
 </script>
-<script type="text/javascript" src="../static/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script>
   window._sqspvat = true;
   window._sqspcookiebanner = true;
@@ -65,40 +45,35 @@ window._prum = [['id', '520b907babe53db940000001'],
 </script>
     <script id='build-stamp' data-build-id='033bc1fc953e5b04ae7e040463fd2d63'>window.__templateVersion = '033bc1fc953e5b04ae7e040463fd2d63'</script>
 
-    <meta property="og:image" content="../static/images/squarespace.jpg" />
-    <meta property="og:image:secure_url" content="../static/images/squarespace.jpg" />
+	<link rel="stylesheet" href="/css/index_site.css">
 
-  
-	<link rel="stylesheet" href="../static/css/index_site.css">
-	
-	
+
 	<script type="text/javascript">
 	window.onload=function(){
 		var submit=document.getElementById("submit-w3l-submit");
 		submit.onclick=function(){
-			
+
 		if(window.ActiveXObject&&!window.XMLHttpRequest){
 			window.XMLHttpRequest=function(){
 				xmlHttp=null;
 				try{
 					xmlHttp=new ActiveXObject("Msxml2.XMLHTTP");
-					
 				}catch(e){
 					try{
 						xmlHttp=new ActiveXObject("Microsoft.XMLHTTP")
 					}catch(el){
-						
+
 					}
 				}
 				return xmlHttp;
 			}
 		}
-		
+
 		var user={
 			account:"1",
 			password:"2"
 		}
-		
+
 		function prepareJSON(){
 			var accountInfo=document.getElementById("account").value;
 			var passwordInfo=document.getElementById("password").value;
@@ -106,11 +81,11 @@ window._prum = [['id', '520b907babe53db940000001'],
 			user.password=passwordInfo;
 			return user.toJSONString();
 		}
-		
-		
+
+
 		var xmlHttp=new XMLHttpRequest();
 		xmlHttp.open("POST","",true);
-		
+
 		xmlHttp.onreadystatechange==function(){
 			if(xmlHttp.readyState==4){
 				if(xmlHttp.status==200){
@@ -118,24 +93,24 @@ window._prum = [['id', '520b907babe53db940000001'],
 				}
 			}
 		}
-		
+
 		var userJson=prepareJSON();
 		xmlHttp.send(userJson);
-		
+
 		}
 	}
 	</script>
-	
-	
+
+
   </head>
 
   <body >
     <header id="header" class="header has-dark-background" role="banner">
   <div class="header-content www-layout">
 
-    
 
-    
+
+
     <section class="domains-trigger">
   <div class="fake-input-wrapper">
     <span class="placeholder-text-short"></span>
@@ -147,7 +122,7 @@ window._prum = [['id', '520b907babe53db940000001'],
     </div>
 
     <div class="long-arrow-right">
-    
+
 
     </div>
 
@@ -155,27 +130,27 @@ window._prum = [['id', '520b907babe53db940000001'],
   </div>
 
 
-    
 
 
-    
+
+
 
 </header>
 
 
 <main id="content" class="content page-beautiful" role="main">
-	
+
   <nav id="sticky-header" class="header has-light-background">
   <div class="header-content www-layout">
 
-    
+
     <h2 class="logo">
       <a class="is-borderless" href="/">
 
       </a>
     </h2>
 
-    
+
     <section class="domains-trigger">
   <div class="fake-input-wrapper">
     <span class="placeholder-text-short"></span>
@@ -207,29 +182,28 @@ window._prum = [['id', '520b907babe53db940000001'],
     <p class="sticky-text"></p>
     <a class="sticky-cta cta button" href="/templates" data-test-attribute="header-get-started" data-direct="true"></a>
   </div>
-	  
+
 </nav>
 
 
 <section id="home-summer-2017">
   <div id="hero-summer-2017">
 
-  
   <div class="hero-imagery">
 
-    
+
     <div class="scene-gallery" data-active-scene="restaurant">
       <div class="scene-wrapper" data-scene="restaurant">
   <div class="context">
 
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="../static/images/restaurant-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="../static/images/restaurant-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="/images/restaurant-mobile.jpg"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="/images/restaurant-scene.jpg"/>
 
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/restaurant-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/restaurant-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="../static/images/restaurant-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="/images/restaurant-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -237,13 +211,13 @@ window._prum = [['id', '520b907babe53db940000001'],
 </div>
       <div class="scene-wrapper" data-scene="small-business">
   <div class="context">
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="../static/images/small-business-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="../static/images/small-business-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="/images/small-business-mobile.jpg?2"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="/images/small-business-scene.jpg?2"/>
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/small-business-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/small-business-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="../static/images/small-business-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="/images/small-business-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -252,13 +226,13 @@ window._prum = [['id', '520b907babe53db940000001'],
       <div class="scene-wrapper" data-scene="real-estate">
   <div class="context">
 
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="../static/images/real-estate-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="../static/images/real-estate-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="/images/real-estate-mobile.jpg?2"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="/images/real-estate-scene.jpg?2"/>
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/real-estate-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/real-estate-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example real estate website demo." data-src="../static/images/real-estate-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example real estate website demo." data-src="/images/real-estate-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -268,7 +242,7 @@ window._prum = [['id', '520b907babe53db940000001'],
     </div>
   </div>
 
-  
+
   <div class="text">
     <h1 class="headsing">
       <span class="make-it" style="font-weight: 500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome!</span>
@@ -290,25 +264,144 @@ window._prum = [['id', '520b907babe53db940000001'],
           <span class="make-it"></span><span class="keyword"></span>
         </span>
       </div>
-    
+
 	  </h1>
     <h3 class="subheading"></h3>
     <div class="cta-wrapper">
+
 	<div class="main-agileits">
 			<div class="form-w3-agile" style="width: 400px;	">
-			<form action="tea_home.html" target="_self" name="regForm" id="regForm" method="post">
-					<input id="account" type="text" name="username" placeholder="账号" required="" />
-					<input id="password" type="password" name="password" placeholder="密码" required="" />
-				
-					
-				<div class="submit-w3l" >
-					<div id="submit-w3l-submit">
-						<input type="submit" style="font-size: 1.4em;" value="登          录"/>
-					</div>
+			<form action="" target="_self" name="regForm" id="regForm1" method="post" style="">
+
+				<div class="submit-w3l1" >
+                    <h2 style="color: aliceblue;text-align: center;font-size:1.4em;font-weight: 500;">您  的  身  份</h2>
+                    <div id="submit-w3l-tea" style="font-size: 1.4em;text-align: center;" value="1">老&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;师</div>
+                    <div id="submit-w3l-stu" style="font-size: 1.4em;text-align: center;" value="2">学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;生</div>
+
 				</div>
 			</form>
+
+
+
+              <form action="/user/login/2" target="_self" name="regForm" id="regForm2" method="post" style="display: none;">
+                <input id="account1" type="text" name="username" placeholder="账号" required="" />
+                <input id="password1" type="password" name="password" placeholder="密码" required="" />
+
+                <div class="submit-w3l" >
+                  <div id="submit-w3l-submit1">
+                    <input type="submit" style="font-size: 1.4em;" value="登          录"/>
+                  </div>
+                </div>
+              </form>
+
+              <form action="/user/login/1" target="_self" name="regForm" id="regForm3" method="post" style="display: none;">
+                <input id="account2" type="text" name="username" placeholder="账号" required="" />
+                <input id="password2" type="password" name="password" placeholder="密码" required="" />
+
+                <div class="submit-w3l" >
+                  <div id="submit-w3l-submit2">
+                    <input type="submit" style="font-size: 1.4em;" value="登          录"/>
+                  </div>
+                </div>
+              </form>
 		</div>
-		</div>	
+
+      <script type="text/javascript">
+
+              var cho1=document.getElementById("submit-w3l-tea");
+              var cho2=document.getElementById("submit-w3l-stu");
+              var regForm1=document.getElementById("regForm1");
+              var regForm2=document.getElementById("regForm2");
+              var regForm3=document.getElementById("regForm3");
+              cho1.onclick=function(){
+                  regForm1.style.display="none";
+                  regForm2.style.display="block";
+              }
+			  cho2.onclick=function(){
+				  regForm1.style.display="none";
+				  regForm3.style.display="block";
+
+			  }
+
+      </script>
+
+
+				<script type="text/javascript" >
+				$(function(){
+		var sub1=document.getElementById("submit-w3l-submit1");
+		sub1.onclick=function(){
+
+		if(window.ActiveXObject&&!window.XMLHttpRequest){
+			window.XMLHttpRequest=function(){
+				xmlHttp=null;
+				try{
+					xmlHttp=new ActiveXObject("Msxml2.XMLHTTP");
+
+				}catch(e){
+					try{
+						xmlHttp=new ActiveXObject("Microsoft.XMLHTTP")
+					}catch(el){
+
+					}
+				}
+				return xmlHttp;
+			}
+		}
+
+		var user={
+			nickname:"1",
+			account:"2",
+			password:"3",
+			email:"4",
+			identity:"1"
+
+		}
+
+		function prepareJSON(){
+			var nicknameInfo=document.getElementById("nickname1").value;
+			var accountInfo=document.getElementById("account1").value;
+			var passwordInfo=document.getElementById("pa1ssword1").value;
+			var emailInfo=document.getElementById("email1").value;
+			var identity;
+
+			var identity1=document.getElementById("submit-w3l-tea");
+			var identity2=document.getElementById("submit-w3l-stu");
+			identity1.onclick=function(){
+				identity="1";
+			}
+			identity2.onclick=function(){
+				identity="2";
+			}
+			user.account=accountInfo;
+			user.password=passwordInfo;
+			user.nickname=nicknameInfo;
+			user.email=emailInfo;
+			user.identity=identity;
+			return user.toJSONString();
+		}
+
+
+		var xmlHttp=new XMLHttpRequest();
+		xmlHttp.open("POST","",true);
+
+		xmlHttp.onreadystatechange==function(){
+			if(xmlHttp.readyState==4){
+				if(xmlHttp.status==200){
+					alert("1")
+				}
+			}
+		}
+
+			var userJson=prepareJSON();
+			xmlHttp.send(userJson);
+
+		}
+
+				})
+				</script>
+
+
+    </div>
 		<div style="visibility: hidden">
       <a class="cta button"  href="/templates"><span style="font-size: 1.5em;">注册</span></a>
       <a class="cta button" href="/templates"><span style="font-size: 1.5em;">登录</span></a></div>
@@ -319,12 +412,8 @@ window._prum = [['id', '520b907babe53db940000001'],
 
 </section>
 
-<script src="../static/js/index.js" type="text/javascript"></script>
+<script src="/js/index.js" type="text/javascript"></script>
 </main>
-
-
-
-
   </body>
 </html>
 
