--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,29 +4,29 @@
 <html class="region-default"><head>
     
 
-	<link rel="stylesheet" href="../static/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../static/css/style1.css">
-	<link rel="stylesheet" href="../static/css/bootstrap.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/style1.css">
+	<link rel="stylesheet" href="/css/bootstrap.css">
 
 
 
 
-    <meta property="og:image" content="../static/images/squarespace.jpg" />
-    <meta property="og:image:secure_url" content="../static/images/squarespace.jpg" />
+    <meta property="og:image" content="/images/squarespace.jpg" />
+    <meta property="og:image:secure_url" content="/images/squarespace.jpg" />
 
   
 <base href="">
 <meta charset="utf-8" />
 <title></title>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="../static/images/squarespace.jpg?format=1000w"/>
+<meta property="og:image" content="/images/squarespace.jpg?format=1000w"/>
 <meta property="og:image:height" content="525"/>
 <meta itemprop="name" content="Build a Website"/>
 <meta itemprop="url" content="https://www.squarespace.com/"/>
-<meta itemprop="thumbnailUrl" content="../static/images/squarespace.jpg?format=1000w"/>
-<link rel="image_src" href="../static/images/squarespace.jpg?format=1000w" />
-<meta itemprop="image" content="../static/images/squarespace.jpg?format=1000w"/>
-<meta name="twitter:image" content="../static/images/squarespace.jpg?format=1000w"/>
+<meta itemprop="thumbnailUrl" content="/images/squarespace.jpg?format=1000w"/>
+<link rel="image_src" href="/images/squarespace.jpg?format=1000w" />
+<meta itemprop="image" content="/images/squarespace.jpg?format=1000w"/>
+<meta name="twitter:image" content="/images/squarespace.jpg?format=1000w"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="Squarespace is the all-in-one solution for anyone looking to create a 
 beautiful website. Domains, eCommerce, hosting, galleries, analytics, and 
@@ -44,7 +44,7 @@ window._prum = [['id', '520b907babe53db940000001'],
     s.parentNode.insertBefore(p, s);
 })();
 </script>
-<script type="text/javascript" src="../static/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script>
   window._sqspvat = true;
   window._sqspcookiebanner = true;
@@ -65,11 +65,11 @@ window._prum = [['id', '520b907babe53db940000001'],
 </script>
     <script id='build-stamp' data-build-id='033bc1fc953e5b04ae7e040463fd2d63'>window.__templateVersion = '033bc1fc953e5b04ae7e040463fd2d63'</script>
 
-    <meta property="og:image" content="../static/images/squarespace.jpg" />
-    <meta property="og:image:secure_url" content="../static/images/squarespace.jpg" />
+    <meta property="og:image" content="/images/squarespace.jpg" />
+    <meta property="og:image:secure_url" content="/images/squarespace.jpg" />
 
   
-	<link rel="stylesheet" href="../static/css/index_site.css">
+	<link rel="stylesheet" href="/css/index_site.css">
 
   </head>
 
@@ -166,14 +166,14 @@ window._prum = [['id', '520b907babe53db940000001'],
       <div class="scene-wrapper" data-scene="restaurant">
   <div class="context">
 
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="../static/images/restaurant-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="../static/images/restaurant-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="/images/restaurant-mobile.jpg?2"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the restaurant industry." data-src="/images/restaurant-scene.jpg?2"/>
 
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/restaurant-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/restaurant-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="../static/images/restaurant-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="/images/restaurant-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -181,13 +181,13 @@ window._prum = [['id', '520b907babe53db940000001'],
 </div>
       <div class="scene-wrapper" data-scene="small-business">
   <div class="context">
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="../static/images/small-business-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="../static/images/small-business-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="/images/small-business-mobile.jpg?2"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the small-business industry." data-src="/images/small-business-scene.jpg?2"/>
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/small-business-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/small-business-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="../static/images/small-business-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example band website demo." data-src="/images/small-business-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -196,13 +196,13 @@ window._prum = [['id', '520b907babe53db940000001'],
       <div class="scene-wrapper" data-scene="real-estate">
   <div class="context">
 
-    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="../static/images/real-estate-mobile.jpg?2"/>
-    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="../static/images/real-estate-scene.jpg?2"/>
+    <img data-viewport="mobile" class="scene mobile" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="/images/real-estate-mobile.jpg?2"/>
+    <img data-viewport="desktop" class="scene" data-load="false" data-size-format="filename" alt="Beautiful websites for the real estate industry." data-src="/images/real-estate-scene.jpg?2"/>
     <div class="overlay-wrapper">
       <div class="overlay backdrop">
-        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="../static/images/real-estate-overlay-1.png?2" />
+        <img data-load="false" data-size-format="filename" alt="Abstract architectural design objects." data-src="/images/real-estate-overlay-1.png?2" />
         <div class="device-screen">
-          <img data-load="false" data-size-format="filename" alt="Example real estate website demo." data-src="../static/images/real-estate-screen.jpg?2" />
+          <img data-load="false" data-size-format="filename" alt="Example real estate website demo." data-src="/images/real-estate-screen.jpg?2" />
         </div>
       </div>
     </div>
@@ -442,7 +442,7 @@ window._prum = [['id', '520b907babe53db940000001'],
 
 </section>
 
-<script src="../static/js/index.js" type="text/javascript"></script>
+<script src="/js/index.js" type="text/javascript"></script>
 </main>
 
 
