--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -222,7 +222,7 @@
     </div>
     <div class="display" style="width: 10%"></div>
     <div id="banner_mid" class="display" style="font-weight:500;font-size: 1.3em;">
-        <center>师生项目交互平台</center>
+        <center>实验室科研计划管理平台</center>
     </div>
     <div style="width: 6%" class="display"></div>
     <div id="banner_right" style="padding: 0;" class="display">
