--- a/src/main/resources/templates/tea_detail.html
+++ b/src/main/resources/templates/tea_detail.html
@@ -773,7 +773,7 @@
     </div>
     <div class="display" style="width: 10%"></div>
     <div id="banner_mid" class="display" style="font-weight:500;font-size: 1.3em;">
-        <center>师生项目交互平台</center>
+        <center>实验室科研计划管理平台</center>
     </div>
     <div style="width: 6%" class="display"></div>
     <div id="banner_right" style="padding: 0;" class="display">
@@ -1308,7 +1308,7 @@
     <div class="main_style display " style="width: 30.5%;margin-left: 33%;">
 
         <span style="width:37%;display: inline-block;"></span>
-        <span class="title" style=""><strong class="title_word" style="color: #000;">进行中</strong></span>
+        <span class="title" style=""><strong class="title_word" style="color: #000;">未完结</strong></span>
 
 
         <ul class="pre-scrollable" id="addLi2">
