--- a/src/main/resources/static/css/stu_home_css.css
+++ b/src/main/resources/static/css/stu_home_css.css
@@ -70,6 +70,7 @@
 #main_div_tea{
     width: 70%;
     margin: 0 auto;
+    margin-left:15%;
     /*border-right: 1px solid red;*/
     /*height: 80px;*/
 
@@ -77,6 +78,7 @@
 #main_div_lab{
     width: 70%;
     margin: 0 auto;
+    margin-left:15%;
     /*margin-top: 30px;*/
     /*height: 80px;*/
 }
