--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,7 +11,7 @@ style{
 	}
 .model{
 	background: #f5f5f5;
-	height:640px;
+	height:auto;
 	position:relative;
 	z-index:1
 }
@@ -32,13 +32,42 @@ style{
 }
 .program_pic{
 	display: inline-block;
+	background-size: cover;
 	margin-right: 30px;
+	margin-top: 20px;
 	height: 125px;
 	width: 250px; 
 	position:relative;
 	z-index:2;
 	margin-bottom: 15px;
 		
+}
+#rootBack{
+	height: auto;
+}
+.program_pic h4{
+	width: 50%;
+	overflow: hidden;;
+	text-overflow: ellipsis;;
+	white-space: nowrap;;
+}
+.programIntro{
+	color: #fff;
+	font-size: 0.8em;
+	width: 90%;
+	height: 3em;
+	overflow: hidden;
+	-ms-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	margin:0 auto;
+	text-indent: 2em;
+}
+.programTime{
+	margin-top: 10px;
+	color: #fff;
+	width: 40%;
+	margin-left: 55%;
+	font-size: 0.8em;
 }
 .program_pic h4{
 	margin-left: 10px;
@@ -51,6 +80,7 @@ style{
 	margin-top: 20px;
 }
 #detailForm{
+	/*height: 600px;*/
 	width: 350px;
 	margin-left: 65px;
 	
