--- a/src/main/resources/static/css/task_style.css
+++ b/src/main/resources/static/css/task_style.css
@@ -333,7 +333,17 @@
 /*	float: right;*/
 	
 }
-#banner_left,#banner_mid,#banner_right{
+.headPic{
+	width:40px;
+	height: 40px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 40px;
+	vertical-align: middle;;
+	margin-left: 7%;
+	color:#fff;
+	font-size: 1.5em;
+	background: #dcdcdc;
 }
 #guidance{
 	
