--- a/src/main/resources/templates/stu_home.html
+++ b/src/main/resources/templates/stu_home.html
@@ -153,6 +153,18 @@
             height: 60px;
             line-height: 60px;
         }
+        #stu_apply{
+            background: url("/images/stu-back.png") 100% no-repeat;
+            /*background-size:cover;*/
+            position: absolute;
+            background-size:100% 100%;
+            background-attachment: fixed;
+            width: 100%;
+            height:720px;
+            overflow-y:hidden;
+            overflow-x:hidden;
+
+        }
     </style>
     <link rel="stylesheet" href="/css/stu_home_css.css"/>
 
@@ -163,15 +175,15 @@
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
-<body >
+<body id="stu_apply" >
 
-<div id="banner" class="banner_height" >
+<div id="" class="banner_height" >
     <div id="banner_left" class="display1 ">
 
     </div>
     <div class="display1" style="width: 10%"></div>
     <div id="banner_mid" class="display1" style="font-weight:500;font-size: 1.3em;">
-        <center>师生项目交互平台</center>
+        <center>实验室科研计划管理平台</center>
     </div>
     <div style="width: 6%" class="display1"></div>
     <div id="banner_right" style="padding: 0;" class="display1">
