--- a/src/main/resources/templates/tea_home.html
+++ b/src/main/resources/templates/tea_home.html
@@ -70,7 +70,7 @@ $(function (){
 		<div class="display" style="width: 10%" >
 			<img class="display" style="width:25px;margin-left: 10px;" alt="" src="/images/add.png"></div>
 	</div>
-	<div id="banner_mid" class="display" style="font-weight:500;font-size: 1.3em;"><center>师生项目交互平台</center></div>
+	<div id="banner_mid" class="display" style="font-weight:500;font-size: 1.3em;"><center>实验室科研计划管理平台</center></div>
 	<div  style="width: 6%" class="display"></div>
 	<div id="banner_right" style="padding: 0;" class="display">
 		<div class="display" style="width: 35%;">
